--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<body>
 		<h1>Assignment IV - Git Hub</h1>
 		<p>This will be the initial commit paragraph</p>
+		<p>This is an additional paragraph added.</p>
 	</body>
 </html>
